# conformal-prediction-demo

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  conformal-prediction.py  demos.toml  index.html  pyproject.toml
.github/workflows/: deploy-sciml.yaml  deploy-warwick.yml  deploy-wasm.yml  deploy.yml  pages.yml
apps/: basis-demo.py  bayesian-regression-demo.py  clustering-demo.py  conformal-prediction.py  gp-demo.py  kernel-demo.py  probability-demo.py  regression-demo.py
apps/lib/: __init__.py  basis.py  data.py  kernels.py  metrics.py  models.py  optimization.py
notebooks/: bayesian-optimization-demo.py  gp-derivative-demo.py  jax-test.py  mlp-demo.py  neural-ode-demo.py
scripts/: build.py  categorize_notebooks.py  deploy-warwick.sh  deploy.sh  generate_index.py  server-app.py
server/: app.py
